# ocula-ucp-extension

./: .gitignore  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md
.github/scripts/: lint_taxonomy.py  resolve_refs.py
.github/workflows/: link-check.yml  schema-lint.yml  validator.yml
descriptors/: README.md
descriptors/docs/: design.md  roadmap.md
descriptors/examples/: lookup_response.json  manifest.json  search_response.json
descriptors/schemas/2026-05-18/: descriptors.json
descriptors/schemas/2026-05-18/types/: descriptors_object.json  differentiator.json  highlight.json  qa_pair.json  use_case.json
taxonomy/: README.md  shopping_intents.json  shopping_intents.md
taxonomy/docs/: methodology.md
validator/: README.md  pyproject.toml
validator/src/ocula_ucp_validator/: __init__.py  cli.py  report.py  schema.py  validate.py
validator/tests/: _retrievers.py  conftest.py  test_cli.py  test_schema.py  test_validate.py
validator/tests/fixtures/: descriptors_capability.json  descriptors_capability_unresolvable.json  invalid_descriptors_wrong_type.json  manifest_bad_version.json  manifest_missing_capability.json  manifest_missing_name.json  manifest_valid.json  valid_search_response.json
validator/tests/fixtures/ucp_schemas/: catalog_search.json
validator/tests/fixtures/ucp_schemas/types/: product.json
