[project]
name = "ocula-ucp-validator"
version = "0.1.0"
description = "Structural conformance validator for the tech.ocula.shopping.descriptors UCP extension."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Ocula Technologies"}]
dependencies = [
    "jsonschema>=4.21",
    "referencing>=0.32",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ocula-ucp-validate = "ocula_ucp_validator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocula_ucp_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
